[gd_scene load_steps=5 format=3 uid="uid://b7mjst8blfgna"]

[ext_resource type="Script" path="res://scenes/main_gameplay/visual_novel/visual_novel_event.gd" id="1_w3fln"]
[ext_resource type="Resource" uid="uid://dft8by3kpogh4" path="res://scenes/main_gameplay/visual_novel/dialogs/test_event.tres" id="2_i33al"]

[sub_resource type="Gradient" id="Gradient_cm3kp"]
colors = PackedColorArray(0.589096, 0.589096, 0.589095, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r4snn"]
gradient = SubResource("Gradient_cm3kp")
fill_to = Vector2(0, 1)

[node name="VisualNovelEvent" type="CanvasLayer"]
script = ExtResource("1_w3fln")
dialog = ExtResource("2_i33al")

[node name="ViewRoot" type="Control" parent="."]
custom_minimum_size = Vector2(920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 920.0
offset_bottom = 1080.0

[node name="PortraitLeft" type="TextureRect" parent="ViewRoot"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 18.0
offset_top = 401.0
offset_right = 367.0
offset_bottom = 925.0
pivot_offset = Vector2(0, 300)

[node name="PortraitRight" type="TextureRect" parent="ViewRoot"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 0
offset_left = 518.0
offset_top = 383.0
offset_right = 921.0
offset_bottom = 995.0
pivot_offset = Vector2(400, 300)
flip_h = true

[node name="TextPanel" type="TextureRect" parent="ViewRoot"]
unique_name_in_owner = true
self_modulate = Color(0.851046, 1, 0.731498, 1)
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_r4snn")

[node name="TextLabel" type="RichTextLabel" parent="ViewRoot/TextPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 28.0
offset_top = 38.0
offset_right = 884.0
offset_bottom = 268.0
bbcode_enabled = true
